--- a/Beginners_R_Plotting_Practicals.Rmd
+++ b/Beginners_R_Plotting_Practicals.Rmd
@@ -14,6 +14,25 @@ output:
     toc: yes
 ---
 
+# FIRST
+
+We need to alter how the output is displayed for this R markdown file. We want the output to be displayed in the console **NOT** within the R markdown file.      
+
+To change this:
+
+    Click on the Gear Icon > Select "Chunk Output in Console" 
+ 
+![](pictures/change_output.png)
+
+# Reveal the Table of Contents 
+
+This practical has a table of contents created using the **#**. Creating headers in Markdown will automatically created a Table of Contents.      
+
+To access this: press the dashed line button on the upper right corner of the markdown file.
+
+![](pictures/TOC.png)
+
+
 
 # Let's make a plot 
 
